--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-.ProseMirror .is-editor-empty:first-child::before {
-  @apply float-left text-gray-400 pointer-events-none h-0;
-  content: attr(data-placeholder);
+.is-editor-empty:first-child::before {
+  @apply float-left text-gray-400 pointer-events-none h-0 content-[attr(data-placeholder)];
 }
